# Aboba-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
shaders/: shader.frag  shader.vert
src/: main.cpp
src/core/: Engine.cpp  Engine.hpp  Logger.hpp  Scene.cpp  Scene.hpp  Timer.hpp  Window.cpp  Window.hpp
src/ecs/: CameraComponent.hpp  Components.hpp  MeshComponent.hpp  TransformComponent.hpp
src/geometry/: Geometry.hpp
src/graphics/: AssetManager.cpp  AssetManager.hpp  Camera.hpp  RenderTypes.hpp  Vertex.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanMesh.cpp  VulkanMesh.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.cpp  VulkanTexture.hpp
src/graphics/wrappers/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp
src/system/: CollisionSystem.cpp  CollisionSystem.hpp  InputSystem.cpp  InputSystem.hpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
